# xmsinterp

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  ____init_____8py_source.html  _anisotropic_interpolator_8cpp.html  _anisotropic_interpolator_8cpp.js  _anisotropic_interpolator_8cpp_source.html  _anisotropic_interpolator_8h.html  _anisotropic_interpolator_8h.js  _anisotropic_interpolator_8h_source.html  _anisotropic_interpolator_8t_8h.html  _anisotropic_interpolator_8t_8h_source.html  _doxygen_mainpage_8md_source.html  _gm_boost_types_8h.html  _gm_boost_types_8h.js  _gm_boost_types_8h_source.html  _gm_extents_8cpp.html  _gm_extents_8cpp_source.html  _gm_extents_8h.html  _gm_extents_8h_source.html  _gm_extents_8t_8h.html  _gm_extents_8t_8h_source.html  _gm_multi_poly_intersection_sorter_8h.html  _gm_multi_poly_intersection_sorter_8h_source.html  _gm_multi_poly_intersection_sorter_terse_8cpp.html  _gm_multi_poly_intersection_sorter_terse_8cpp_source.html  _gm_multi_poly_intersection_sorter_terse_8h.html  _gm_multi_poly_intersection_sorter_terse_8h_source.html  _gm_multi_poly_intersector_8cpp.html  _gm_multi_poly_intersector_8cpp.js  _gm_multi_poly_intersector_8cpp_source.html  _gm_multi_poly_intersector_8h.html  _gm_multi_poly_intersector_8h.js  _gm_multi_poly_intersector_8h_source.html  _gm_multi_poly_intersector_8t_8h.html  _gm_multi_poly_intersector_8t_8h_source.html  _gm_multi_poly_intersector_data_8h.html  (+604 more)
.github/: XmsInterp-CI.yaml
.github/workflows/: Linux-CI.yaml  Mac-CI.yaml  Windows-CI.yaml  XmsInterp-CI.yaml
.travis/: install.sh  run.sh
Doxygen/: Doxyfile  DoxygenMainpage.md  Interpolation_Tutorial.md
_package/: pyproject.toml  setup.py
_package/tests/unit_tests/: interp_anisotropic_pyt.py  interp_idw_pyt.py  interp_linear_extrap_idw_pyt.py  interp_linear_pyt.py  interp_util_pyt.py  interpolator_api_pyt.py
_package/xms/interp/: __init__.py
_package/xms/interp/api/: __init__.py  interpolator.py
_package/xms/interp/interpolate/: __init__.py  interp_anisotropic.py  interp_idw.py  interp_linear.py  interp_linear_extrap_idw.py  interp_util.py  interpolator.py
_package/xmsinterp/: __init__.py
_package/xmsinterp/interpolate/: interp_anisotropic.py  interp_idw.py  interp_linear.py
dev/: setenv.bat  setenv.sh  xmsprofile_debug  xmsprofile_release
examples/: plumedat.csv  xms.yml
examples/2D_Interpolation/: 2D_Interpolation.ipynb  plumedat.csv
pydocs/: .buildinfo  genindex.html  getting_started.html  gettingstarted.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
pydocs/.doctrees/: environment.pickle  getting_started.doctree  gettingstarted.doctree  index.doctree  modules.doctree
pydocs/_sources/: getting_started.rst.txt  gettingstarted.rst.txt  index.rst.txt
pydocs/modules/geometry/: GmTriSearch.html  TriSearch.html
pydocs/modules/interpolate/: InterpAnisotropic.html  InterpIdw.html  InterpLinear.html
pydocs/modules/triangulate/: Tin.html  TrTin.html  TrTriangulatorPoints.html
pydocs/source/: conf.py  getting_started.rst  gettingstarted.rst  index.rst  modules.rst
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  (+78 more)
test_package/: conanfile.py  example.cpp
xmsinterp/geometry/: GmBoostTypes.h  GmExtents.cpp  GmExtents.h  GmExtents.t.h  GmMultiPolyIntersectionSorter.h  GmMultiPolyIntersectionSorterTerse.cpp  GmMultiPolyIntersectionSorterTerse.h  GmMultiPolyIntersector.cpp  GmMultiPolyIntersector.h  GmMultiPolyIntersector.t.h  GmMultiPolyIntersectorData.h  GmPolyLinePtRedistributer.cpp  GmPolyLinePtRedistributer.h  GmPolyLinePtRedistributer.t.h  GmPolygon.cpp  GmPolygon.h  GmPolygon.t.h  GmPtSearch.cpp  GmPtSearch.h  GmPtSearch.t.h  GmTriSearch.cpp  GmTriSearch.h  GmTriSearch.t.h  geoms.cpp  geoms.h  geoms.t.h
xmsinterp/interpolate/: InterpAnisotropic.cpp  InterpAnisotropic.h  InterpAnisotropic.t.h  InterpBase.h  InterpIdw.cpp  InterpIdw.h  InterpIdw.t.h  InterpLinear.cpp  InterpLinear.h  InterpLinear.t.h  InterpLinearExtrapIdw.cpp  InterpLinearExtrapIdw.h  InterpLinearExtrapIdw.t.h  InterpSignals.cpp  InterpSignals.h  InterpUtil.cpp  InterpUtil.h  InterpUtil.t.h
xmsinterp/interpolate/detail/: AnisotropicInterpolator.cpp  AnisotropicInterpolator.h  AnisotropicInterpolator.t.h  InterpCt.cpp  InterpCt.h  InterpNatNeigh.cpp  InterpNatNeigh.h  InterpNatNeigh.t.h  NodalFunc.cpp  NodalFunc.h  NodalFunc.t.h
xmsinterp/matrices/: matrix.cpp  matrix.h
xmsinterp/python/: xmsinterp_py.cpp
xmsinterp/python/geometry/: GmTriSearch_py.cpp  GmTriSearch_pyt.py  geometry_py.cpp  geometry_py.h
xmsinterp/python/interpolate/: InterpAnisotropic_py.cpp  InterpAnisotropic_pyt.py  InterpBase_py.cpp  InterpIdw_py.cpp  InterpIdw_pyt.py  InterpLinearExtrapIdw_py.cpp  InterpLinear_py.cpp  InterpLinear_pyt.py  InterpNatNeigh_py.cpp  InterpUtil_py.cpp  NodalFunc_py.cpp  interpolate_py.cpp  interpolate_py.h
xmsinterp/python/misc/: PyObserver.h  misc_py.cpp  misc_py.h  observer_py.cpp  observer_pyt.py
xmsinterp/python/triangulate/: TrTin_py.cpp  TrTin_pyt.py  TrTriangulatorPoints_py.cpp  triangulate_py.cpp  triangulate_py.h
xmsinterp/thread/: ThreadLoop.cpp  ThreadLoop.h  ThreadMgr.cpp  ThreadMgr.h
xmsinterp/triangulate/: TrBreaklineAdder.cpp  TrBreaklineAdder.h  TrBreaklineAdder.t.h  TrTin.cpp  TrTin.h  TrTin.t.h  TrTriangulator.cpp  TrTriangulator.h  TrTriangulatorPoints.cpp  TrTriangulatorPoints.h  TrTriangulatorPoints.t.h  triangles.cpp  triangles.h
xmsinterp/triangulate/detail/: TrAutoFixFourTrianglePts.cpp  TrAutoFixFourTrianglePts.h  TrAutoFixFourTrianglePts.t.h  TrOuterTriangleDeleter.h  (+4 more)
xmsinterp/tutorial/: TutInterpolation.cpp  TutInterpolation.t.h
(+21 files in other folders)
